<resources>
    <string name="app_name">GozayaanDemo</string>
    <string name="dhaka_bangladesh">Dhaka,Bangladesh</string>
    <string name="search">Search</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="visa">Visa</string>
    <string name="buses">Buses</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">See All</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="mountain_safari">Mountain Safari</string>
    <string name="india">India</string>
    <string name="back_button">Back Button</string>
    <string name="per_day"> /PER DAY</string>
    <string name="book_now">Book Now</string>
</resources>