<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_20sdp" />

    <!-- Top Bar -->
    <ImageView
        android:id="@+id/gridIcon"
        android:layout_width="@dimen/_19sdp"
        android:layout_height="@dimen/_19sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_grid"
        app:layout_constraintStart_toEndOf="@+id/guideline_start_vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="@dimen/_6sdp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/dhaka_bangladesh"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/gridIcon"
        app:layout_constraintEnd_toStartOf="@+id/profileIcon"
        app:layout_constraintStart_toEndOf="@id/gridIcon"
        app:layout_constraintTop_toTopOf="@+id/gridIcon" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="@dimen/_19sdp"
        android:layout_height="@dimen/_19sdp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="@+id/gridIcon"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
        app:layout_constraintTop_toTopOf="@+id/gridIcon" />

    <!-- Search Bar -->
    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/search_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/_6sdp"
        android:hint="@string/search"
        android:padding="@dimen/_9sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/search_color"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/gridIcon"

        />

    <!-- Popular Categories Label -->
    <TextView
        android:id="@+id/popularCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/popular_categories"
        android:textColor="@color/popular_text_color"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toEndOf="@+id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />
    <LinearLayout
        android:id="@+id/categoriesContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
        app:layout_constraintStart_toEndOf="@+id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/popularCategories">

        <TextView
            android:id="@+id/category_flights"
            style="@style/CategoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/flights"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/_6sdp"
            app:drawableTopCompat="@drawable/ic_flight" />

        <TextView
            android:id="@+id/category_hotels"
            style="@style/CategoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/hotels"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/_6sdp"
            app:drawableTopCompat="@drawable/ic_hotel" />

        <TextView
            android:id="@+id/category_visa"
            style="@style/CategoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/visa"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/_6sdp"
            app:drawableTopCompat="@drawable/ic_visa" />

        <TextView
            android:id="@+id/category_buses"
            style="@style/CategoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/buses"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/_6sdp"
            app:drawableTopCompat="@drawable/ic_bus" />
    </LinearLayout>

    <!-- Recommended Section -->
    <TextView
        android:id="@+id/recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/recommended"
        android:textColor="@color/popular_text_color"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/rubik_semi_bold"
        app:layout_constraintStart_toEndOf="@+id/guideline_start_vertical"
        app:layout_constraintTop_toBottomOf="@id/categoriesContainer" />

    <TextView
        android:id="@+id/seeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/common_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
        app:layout_constraintTop_toTopOf="@id/recommended"
        app:layout_constraintBottom_toBottomOf="@+id/recommended"
        />

    <!-- Recommended Items Scroll -->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recommendedRecyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:paddingStart="@dimen/_12sdp"-->
<!--        android:paddingEnd="@dimen/_12sdp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/recommended"-->
<!--        android:orientation="horizontal"-->
<!--        tools:listitem="@layout/activity_home"/>-->

<!--        <HorizontalScrollView-->
<!--        android:id="@+id/recommendedScroll"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:paddingStart="@dimen/_12sdp"-->
<!--        android:paddingEnd="@dimen/_12sdp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/guideline_start_vertical"-->
<!--        app:layout_constraintTop_toBottomOf="@id/recommended">-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <LinearLayout-->
<!--                android:layout_width="180dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:background="@drawable/item_background"-->
<!--                android:orientation="vertical"-->
<!--                android:padding="8dp">-->

<!--                <FrameLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="100dp">-->

<!--                    &lt;!&ndash; ImageView &ndash;&gt;-->
<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        android:src="@drawable/item_background" />-->

<!--                    &lt;!&ndash; Text inside the ImageView &ndash;&gt;-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Mountain Safari"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textSize="16sp"-->
<!--                        android:layout_gravity="center" /> &lt;!&ndash; Center text inside ImageView &ndash;&gt;-->

<!--                </FrameLayout>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="India"-->
<!--                    android:textColor="#BBBBBB"-->
<!--                    android:textSize="14sp"-->
<!--                    android:layout_marginTop="4dp"/>-->

<!--            </LinearLayout>-->

<!--        </LinearLayout>-->
<!--    </HorizontalScrollView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_bookmark"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nav_bookmark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_notifications"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/nav_home"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nav_notifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_notifications"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_profile"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/nav_bookmark"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nav_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/nav_notifications"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
